--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -2172,7 +2172,7 @@ header .header-top .header-info-right ul li i {
 }
 .banner-area-5 .basic-loan-calculator .label {
   font-size: 16px;
-  color: #060608;
+  color: var(--black_900);
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   display: block;
@@ -8014,7 +8014,7 @@ header .header-top .header-info-right ul li i {
   margin-bottom: 0;
 }
 .cta-3 .cta-content .theme-btn {
-  background-color: var(--secondary_color);
+  background-color: #171d24;
   height: 60px;
   line-height: 57px;
   padding: 0 40px;
